payflow-platform-config/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payflow
  labels:
    app.kubernetes.io/part-of: payflow
