payflow-platform-config/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-api
  labels:
    app.kubernetes.io/name: payflow-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: payflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payflow-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payflow-api
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: payflow
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: payflow-api
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: payflow-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: tmp
          emptyDir: {}
