payflow-platform-config/base/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payflow-worker
  labels:
    app.kubernetes.io/name: payflow-worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: payflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: payflow-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payflow-worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: payflow
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: payflow-worker
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: payflow-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: tmp
          emptyDir: {}
