payflow-platform-config/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: payflow-api
  labels:
    app.kubernetes.io/name: payflow-api
    app.kubernetes.io/part-of: payflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: payflow-api
  ports:
    - name: http
      port: 8080
      targetPort: http
