payflow-platform-config/base/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payflow-api
  labels:
    app.kubernetes.io/name: payflow-api
    app.kubernetes.io/part-of: payflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: payflow-api.invalid.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payflow-api
                port:
                  name: http
